name:                elbenshiracom
version:             0.1.0.0
synopsis: Personal website: elbenshira.com
description:
homepage:            https://github.com/elben/elben.github.io
license:             BSD3
license-file:        LICENSE
author:              Elben Shira
maintainer:          elbenshira@gmail.com
copyright:           2018 Elben Shira
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable elbenshiracom-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pencil
                     , text
                     , unordered-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/elben/elben.github.com

