name:                pencil
version:             0.1.0.0
synopsis: Static site generator
description:
  Pencil is a static site generator. It's a simple way to generate your personal
  website. Pencil comes pre-loaded with goodies such as easy blog generation,
  tagging, templating and layouts, Markdown rendering, and Sass/SCSS
  compilation. But it's also flexible and simple enough for you to extend for
  your own needs.
homepage:            https://github.com/elben/pencil
license:             BSD3
license-file:        LICENSE
author:              Elben Shira
maintainer:          elbenshira@gmail.com
copyright:           2018 Elben Shira
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pencil
                     , Pencil.Blog
                     , Pencil.Internal
                     , Pencil.Internal.Env
                     , Pencil.Internal.Parser
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , edit-distance
                     , filepath
                     , hashable
                     , hsass
                     , mtl
                     , pandoc
                     , parsec
                     , text
                     , time
                     , unordered-containers
                     , vector
                     , yaml
  default-language:    Haskell2010

executable pencil-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pencil
                     , bytestring
                     , directory
                     , edit-distance
                     , filepath
                     , hsass
                     , mtl
                     , pandoc
                     , parsec
                     , text
                     , time
                     , unordered-containers
                     , yaml
  default-language:    Haskell2010

test-suite pencil-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pencil
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/elben/pencil
